@@ -1,119 +1,0 @@
-<gconfschemafile>
-    <schemalist>        
-
-            
-      <schema>
-        <key>/schemas/apps/minbar/city/lat</key>
-        <owner>minbar</owner>
-	<applyto>/apps/minbar/city/lat</applyto>        
-	<type>float</type>
-        <default>21.4200</default>
-        <locale name="C">
-          <short>Latitude of city</short>
-        </locale>
-      </schema>
- 
-      <schema>
-        <key>/schemas/apps/minbar/city/lon</key>
-	<applyto>/apps/minbar/city/lon</applyto>
-        <owner>minbar</owner>
-        <type>float</type>
-        <default>39.8300</default>
-        <locale name="C">
-          <short>Longitude of city</short>
-        </locale>
-      </schema> 
-      
-      <schema>
-        <key>/schemas/apps/minbar/city/name</key>
-	<applyto>/apps/minbar/city/name</applyto>
-        <owner>minbar</owner>
-        <type>string</type>
-        <default>Mecca</default>
-        <locale name="C">
-          <short>Name of city</short>
-        </locale>
-      </schema> 
- 	<schema>
-        <key>/schemas/apps/minbar/city/height</key>
-	<applyto>/apps/minbar/city/height</applyto>
-        <owner>minbar</owner>
-        <type>float</type>
-        <default>0</default>
-        <locale name="C">
-          <short>Height of city</short>
-        </locale>
-      </schema>   
-     
-
-	<schema>
-        <key>/schemas/apps/minbar/prefs/correction</key>
-	<applyto>/apps/minbar/prefs/correction</applyto>
-        <owner>minbar</owner>
-        <type>int</type>
-        <default>3</default>
-        <locale name="C">
-          <short>Time Zone, difference from GMT</short>
-        </locale>
-      </schema>   
-	
-	<schema>
-        <key>/schemas/apps/minbar/prefs/play</key>
-	<applyto>/apps/minbar/prefs/play</applyto>
-        <owner>minbar</owner>
-        <type>bool</type>
-        <default>true</default>
-        <locale name="C">
-          <short>Whether to play athan or not</short>
-        </locale>
-      </schema>   
-      
-
-	<schema>
-        <key>/schemas/apps/minbar/prefs/notif</key>
-	<applyto>/apps/minbar/prefs/notif</applyto>
-        <owner>minbar</owner>
-        <type>bool</type>
-        <default>true</default>
-        <locale name="C">
-          <short>Whether or not to notify before a period</short>
-        </locale>
-      </schema> 
-	<schema>
-        <key>/schemas/apps/minbar/prefs/notiftime</key>
-	<applyto>/apps/minbar/prefs/notiftime</applyto>
-        <owner>minbar</owner>
-        <type>int</type>
-        <default>5</default>
-        <locale name="C">
-          <short>Time before athan, for notification</short>
-        </locale>
-      </schema> 
-
-	<schema>
-        <key>/schemas/apps/minbar/prefs/method</key>
-	<applyto>/apps/minbar/prefs/method</applyto>
-        <owner>minbar</owner>
-        <type>int</type>
-	<default>5</default>
-	<locale name="C">
-          <short>Calculation method</short>
-        </locale>
-      </schema> 
-
-	<schema>
-        <key>/schemas/apps/minbar/prefs/hidden</key>
-	<applyto>/apps/minbar/prefs/hidden</applyto>
-        <owner>minbar</owner>
-        <type>bool</type>
-        <default>false</default>
-        <locale name="C">
-          <short>Whether or not to show the main window on startup</short>
-        </locale>
-      </schema> 
-
-
-</schemalist>
-
-                            
-</gconfschemafile>
