@@ -1,4 +1,4 @@
 src/main.c
 data/minbar.glade.in
-data/minbar.schemas
-minbar.desktop
+data/minbar.schemas.in
+minbar.desktop.in
